<resources>
    <string name="tfZemuisca">ZEMUISCA</string>
    <string name="app_name">Proyecto Apps Moviles</string>
    <string name="botonGeografia">Geografía y Politica</string>
    <string name="botonLagunas">Recorrido Sagrado</string>
    <string name="botonMitologia">Mitología</string>
    <string name="botonCostumbres">Costumbres</string>
    <string name="botonPremios">Progreso</string>
    <string name="botonSalir">Salir</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="botonAnterior">Anterior</string>
    <string name="tfInterfazGeografia">Geografia y Politica</string>
    <string name="tfPregunta">Pregunta</string>
    <string name="botonEnviarRespuesta">Enviar</string>
    <string name="tfProgreso">Progreso</string>
    <string name="botonAtras">Atras</string>
</resources>