<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomuisca"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonGeografia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/boton_redondo"
        android:onClick="onclickGeografia"
        android:text="@string/botonGeografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonRecorridoSagrado"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_redondo"
        android:onClick="onclickRecorridoSagrado"
        android:text="@string/botonLagunas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGeografia" />

    <Button
        android:id="@+id/botonMitologia"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_redondo"
        android:onClick="onclickMitologia"
        android:text="@string/botonMitologia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRecorridoSagrado" />

    <Button
        android:id="@+id/botonCostumbres"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_redondo"
        android:onClick="onclickCostumbres"
        android:text="@string/botonCostumbres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonMitologia" />

    <TextView
        android:id="@+id/tfZemuisca"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/tfZemuisca"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/botonGeografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/botonProgreso"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_redondo"
        android:onClick="onclickProgreso"
        android:text="@string/botonPremios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonCostumbres" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton_salir"
        android:onClick="cerrarApp"
        android:text="@string/botonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonProgreso" />

</androidx.constraintlayout.widget.ConstraintLayout>